# dynamo_archive_poc

./: ARCHITECTURE.md  README.md  architecture.puml
stream-lambda/: .gitignore  lambda_function.py  pyproject.toml  requirements.txt  test_lambda_function.py
terraform/: cloudwatch.tf  iam.tf  lambda.tf  main.tf  outputs.tf  sqs.tf  variables.tf
